--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -12,6 +12,7 @@
 @import "bootstrap/scss/containers";
 
 @import "bootstrap/scss/buttons";
+@import "bootstrap/scss/navbar";
 
 @import "bootstrap/scss/utilities/api";
 
