--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -13,6 +13,7 @@
 
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/navbar";
+@import "bootstrap/scss/transitions";
 
 @import "bootstrap/scss/utilities/api";
 
