--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -10,10 +10,14 @@
 @import "bootstrap/scss/utilities";
 @import "bootstrap/scss/reboot";
 @import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/helpers";
 
 @import "bootstrap/scss/buttons";
+@import "bootstrap/scss/card";
 @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/transitions";
+@import "bootstrap/scss/images";
 
 @import "bootstrap/scss/utilities/api";
 
