--- a/assets/stylesheets/all.scss
+++ b/assets/stylesheets/all.scss
@@ -11,6 +11,7 @@
 @import "bootstrap/scss/reboot";
 @import "bootstrap/scss/containers";
 @import "bootstrap/scss/grid";
+@import "bootstrap/scss/forms";
 @import "bootstrap/scss/helpers";
 
 @import "bootstrap/scss/buttons";
